--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,20 @@
     "builds": [
         {
             "src": "proyecto_clinica/wsgi.py",
-            "use": "@vercel/python"
-            
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
+            }
         }
     ],
     "routes": [
         {
             "src": "/static/(.*)",
             "dest": "/static/$1"
+        },
+        {
+            "src": "/admin/(.*)",
+            "dest": "proyecto_clinica/wsgi.py"
         },
         {
             "src": "/(.*)",
