--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,9 @@
         "use": "@vercel/python",
         "config": {
           "runtime": "python3.9",
-          "maxLambdaSize": "15mb"
+          "maxLambdaSize": "15mb",
+          "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput"
         }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "staticfiles" }
       }
     ],
     "routes": [
