--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
       }
     ],
     "routes": [
-      { "src": "/static/(.*)", "dest": "/staticfiles/$1" },
+      { "src": "/static/(.*)", "dest": "/static/$1" },
       { "src": "/(.*)", "dest": "proyecto_clinica/wsgi.py" }
     ]
 }
